--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - FolioOne Bootstrap Template</title>
+  <title>Portofolio Erlangga Romi</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -85,7 +85,7 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello Everyone</span>
-              <h2 class="headline"> Seorang Network Engineer yang berpengalaman lebih dari 2 tahun. Memiliki ketertarikan dan pengalaman di bidang Sytem Engineer. Menguasai beberapa bahasa program seperti C++, C, Phyton, dan Java serta OS linux, Berpengalaman dalam Routing Protocol serta Troubleshooting dalam masalah jaringan</h2>
+              <h2 class="headline"> Saya Seorang Network Engineer yang berpengalaman lebih dari 2 tahun. Memiliki ketertarikan dan pengalaman di bidang Sytem Engineer. Menguasai beberapa bahasa program seperti C++, C, Phyton, dan Java serta OS linux, Berpengalaman dalam Routing Protocol serta Troubleshooting dalam masalah jaringan</h2>
               <p class="lead">
                 
 
@@ -129,7 +129,7 @@
               <div class="skill-item">
                 <i class="bi bi-router"></i>
                 <h3>Routing Protocol</h3>
-                <p>turan dan algoritma yang digunakan router untuk berkomunikasi, bertukar informasi tentang topologi jaringan, dan secara otomatis menentukan jalur terbaik untuk mengirimkan paket data dari sumber ke tujuan.</p>
+                <p>Aturan dan algoritma yang digunakan router untuk berkomunikasi, bertukar informasi tentang topologi jaringan, dan secara otomatis menentukan jalur terbaik untuk mengirimkan paket data dari sumber ke tujuan.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
