--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portofolio - Erlangga Romi</title>
+  <title>Portofolio Erlangga Romi</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -82,7 +82,7 @@
               <p data-aos="fade-up" data-aos-delay="400">Seorang Network Engineer yang berpengalaman lebih dari 2 tahun. Memiliki ketertarikan dan pengalaman di bidang Sytem Engineer. Menguasai beberapa bahasa program seperti C++, C, Phyton, dan Java serta OS linux, Berpengalaman dalam Routing Protocol serta Troubleshooting dalam masalah jaringan.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
                 <a href="portfolio.html" class="btn btn-primary">View My Work</a>
-                <a href="contact.html" class="btn btn-outline">Get In Touch</a>
+                <a href="contact.html" class="btn btn-outline">Hubungi Saya</a>
               </div>
               <div class="social-links" data-aos="fade-up" data-aos-delay="600">
                 <a href="#"><i class="bi bi-twitter"></i></a>
@@ -95,7 +95,7 @@
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
-                <img src="assets/img/profile/profile-square-11.webp" alt="Sarah Mitchell" class="img-fluid">
+                <img src="assets/img/profile/profile-square-11.webp" alt="ErlanggaRomi" class="img-fluid">
                 <div class="floating-elements">
                   <div class="floating-card design" data-aos="fade-left" data-aos-delay="700">
                     <i class="bi bi-palette"></i>
