--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - FolioOne Bootstrap Template</title>
+  <title>Portofolio Erlangga Romi</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -106,12 +106,12 @@
                 <article class="experience-item">
                   <h4>Network Engineer</h4>
                   <h5>2022 - Sekarang</h5>
-                  <p class="company"><em>●	Backup data system baik itu harian mingguan dan bulanan</em></p>
+                  <p class="company"><em>PT Maxindo Mitra Solusi – Jakarta,Indonesia</em></p>
                   <ul>
-                    <li>●	Backup data system baik itu harian mingguan dan bulanan</li>
-                    <li>●	Melakukan troubleshooting pada infrastruktur perusahaan atau klien </li>
-                    <li>●	Memelihara dokumentasi proyek, instalasi dan infrastruktur jaringan</li>
-                    <li>●	Pembuatan laporan atau ticketing yang di laporkan kepada beberapa divisi terkait untuk hasil report</li>
+                    <li>	Backup data system baik itu harian mingguan dan bulanan</li>
+                    <li>	Melakukan troubleshooting pada infrastruktur perusahaan atau klien </li>
+                    <li>	Memelihara dokumentasi proyek, instalasi dan infrastruktur jaringan</li>
+                    <li>	Pembuatan laporan atau ticketing yang di laporkan kepada beberapa divisi terkait untuk hasil report</li>
                   </ul>
                 </article>
 
@@ -120,10 +120,10 @@
                   <h5>2020 - 2022</h5>
                   <p class="company"><em>PT Rackh Lintas Asia – Jakarta, Indonesia</em></p>
                   <ul>
-                    <li>●	Mendesign dan Integrasi System</li>
-                    <li>●	Memantau dan mengatasi masalah dalam system</li>
-                    <li>●	Mengupgrade system</li>
-                    <li>●	Backup data system baik itu harian mingguan dan bulanan</li>
+                    <li>	Mendesign dan Integrasi System</li>
+                    <li>	Memantau dan mengatasi masalah dalam system</li>
+                    <li>	Mengupgrade system</li>
+                    <li>	Backup data system baik itu harian mingguan dan bulanan</li>
                   </ul>
                 </article>
 
@@ -132,10 +132,10 @@
                   <h5>2018 - 2020</h5>
                   <p class="company"><em>PT Caveo Biometric Security – Jakarta, Indonesia</em></p>
                   <ul>
-                    <li>●	Cek dan update system operasi dan aplikasi yang dijalankan oleh pengguna</li>
-                    <li>●	Bertugas melakukan backup terhadap semua data agar aman</li>
-                    <li>●	Memastika semua device yang digunakan oleh pengguna harus terhubung ke jaringan</li>
-                    <li>●	Melakukan pengecekan jika aplikasi yang di gunakan tidak berfungsi</li>
+                    <li>	Cek dan update system operasi dan aplikasi yang dijalankan oleh pengguna</li>
+                    <li>	Bertugas melakukan backup terhadap semua data agar aman</li>
+                    <li>	Memastika semua device yang digunakan oleh pengguna harus terhubung ke jaringan</li>
+                    <li>	Melakukan pengecekan jika aplikasi yang di gunakan tidak berfungsi</li>
                   </ul>
                 </article>
               </div>
