Describe your changes here

--- a/resume.html
+++ b/resume.html
@@ -108,7 +108,7 @@
                   <h5>2022 - Sekarang</h5>
                   <p class="company"><em>PT Maxindo Mitra Solusi – Jakarta,Indonesia</em></p>
                   <ul>
-                    <li>	Backup data system baik itu harian mingguan dan bulanan</li>
+                    <li>	Membantu perencanaan,perancangan,konfigurasi dan pemasangan jaringan </li>
                     <li>	Melakukan troubleshooting pada infrastruktur perusahaan atau klien </li>
                     <li>	Memelihara dokumentasi proyek, instalasi dan infrastruktur jaringan</li>
                     <li>	Pembuatan laporan atau ticketing yang di laporkan kepada beberapa divisi terkait untuk hasil report</li>
