--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 order-1 order-lg-2">
+          <div class="col-lg-6 order-lg-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
                 <img src="assets/img/profile/romiiii.webp"alt="ErlanggaRomi" class="img-fluid">
