--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@ Wireless Access Points (AP): Penyedia akses Wi-Fi, termasuk untuk outdoor dan in
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright 2025</span> <strong class="px-1 sitename">Erlangga Romi</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright 2025</span> <strong class="px-1 sitename">Erlangga Romi</strong> <span><br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
