--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,27 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
+                  <img src="assets/img/portfolio/cyber-academy-indonesia.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/cyber-academy-indonesia.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Cyber Academy</h4>
+                  <p>Introduction to Information Security Course</p>
+                  <div class="portfolio-tags">
+                    <span>Network Security</span>
+                    <span>Cyber Security</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
                   <img src="assets/img/portfolio/dicoding-ai.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/dicoding-ai.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
