--- a/portfolio.html
+++ b/portfolio.html
@@ -581,6 +581,46 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/topologi-adk.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/topologi-adk.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Perancangan dan Pembangunan Infrastruktur PT ADK Connect Emotions</h4>
+                  <p>Topologi Global PT ADK Connect Emotions</p>
+                  <div class="portfolio-tags">
+                    <span>Infrastruktur</span>
+                    <span>Network Management</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/pergantian-AP-adk.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/pergantian-AP-adk.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Perancangan dan Pembangunan Infrastruktur PT ADK Connect Emotions</h4>
+                  <p>Replace Perangkat AccesPoint dari Tplink ke Ruijie</p>
+                  <div class="portfolio-tags">
+                    <span>Infrastruktur</span>
+                    <span>Network Management</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div><!-- End Portfolio Items Container -->
 
         </div>
