--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,27 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
+                  <img src="assets/img/portfolio/alibaba-bigdata.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/alibaba-bigdata.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Alibaba Cloud</h4>
+                  <p>BIG Data MySQL for Beginners-Basic Queries</p>
+                  <div class="portfolio-tags">
+                    <span>Database</span>
+                    <span>Cloud</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
                   <img src="assets/img/portfolio/network-series-alibaba.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/network-series-alibaba.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
@@ -145,6 +166,27 @@
                   <div class="portfolio-tags">
                     <span>Network</span>
                     <span>Cloud</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/bnsp.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/bnsp.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>BNSP</h4>
+                  <p>Teknik Komputer</p>
+                  <div class="portfolio-tags">
+                    <span>Network</span>
+                    <span>Hardware</span>
                   </div>
                 </div>
               </div>
@@ -399,9 +441,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/juniper-security.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/juniper-mistai.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/juniper-security.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="assets/img/portfolio/juniper-mistai.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
@@ -453,6 +495,27 @@
                   <div class="portfolio-tags">
                     <span>Keamanan Cyber</span>
                     <span>Ethical Hacking</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/lp3i.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/lp3i.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>LP3I</h4>
+                  <p>Basic Configuration of Mikrotik and Wireless Connection</p>
+                  <div class="portfolio-tags">
+                    <span>Network</span>
+                    <span>WAN</span>
                   </div>
                 </div>
               </div>
