--- a/portfolio.html
+++ b/portfolio.html
@@ -91,6 +91,27 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
+                  <img src="assets/img/portfolio/iso-27001.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/iso-27001.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>MASTERMIND</h4>
+                  <p>ISO/IEC 27001:2022 Lead Auditor</p>
+                  <div class="portfolio-tags">
+                    <span>Audit</span>
+                    <span>Sistem Manajemen Keamanan Informasi</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
                   <img src="assets/img/portfolio/alibaba-cloud-computing.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/alibaba-cloud-computing.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
