--- a/portfolio.html
+++ b/portfolio.html
@@ -280,6 +280,27 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
+                  <img src="assets/img/portfolio/forti-cyber.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/forti-cyber.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Fortinet</h4>
+                  <p>Fortinet Certified Associate in Cybersecurity</p>
+                  <div class="portfolio-tags">
+                    <span>Network</span>
+                    <span>Security</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
                   <img src="assets/img/portfolio/fortinet-nse-5.webp" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/fortinet-nse-5.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
@@ -289,6 +310,27 @@
                 <div class="portfolio-info">
                   <h4>Fortinet</h4>
                   <p>NSE 5 FortiManager 7.2 Self-Paced</p>
+                  <div class="portfolio-tags">
+                    <span>Network</span>
+                    <span>Security</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/operator-forti.webp" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/operator-forti.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Fortinet</h4>
+                  <p>Fortigate 7.6 Operator Self-Paced</p>
                   <div class="portfolio-tags">
                     <span>Network</span>
                     <span>Security</span>
